16 - Multi-Node Celery Running on Docker Compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,12 +23,14 @@ services:
     volumes:
       - timescale_data:/var/lib/postgresql/data
     restart: unless-stopped
-  web:
+  django-base: &django-base
     networks:
       - cfe
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env.web-container
     develop:
       watch:
         - action: sync+restart
@@ -37,13 +39,37 @@ services:
         - action: sync+restart
           path: ./requirements.txt
           target: /tmp/requirements.txt
+  web:
+    <<: *django-base
     environment:
       - NODE_ID=0
       - PORT=8088
-    env_file:
-      - .env.web-container
     ports:
       - "8088:8088"
+  beat:
+    <<: *django-base
+    environment:
+      - NODE_ID=0
+    command: |
+      celery -A cfehome beat -l info
+  node_1:
+    <<: *django-base
+    environment:
+      - NODE_ID=1
+    command: |
+      celery -A cfehome worker -Q node-1 -l info
+  node_2:
+    <<: *django-base
+    environment:
+      - NODE_ID=2
+    command: |
+      celery -A cfehome worker -Q node-2 -l info
+  node_3:
+    <<: *django-base
+    environment:
+      - NODE_ID=3
+    command: |
+      celery -A cfehome worker -Q node-3 -l info
 
 volumes:
   redis_data:
