--- a/ansible/roles/sync_django/tasks/main.yml
+++ b/ansible/roles/sync_django/tasks/main.yml
@@ -55,6 +55,13 @@
     decrypt: yes
   become: yes
 
+- name: Set NODE_ID in .env file
+  ansible.builtin.lineinfile:
+    path: /opt/app/.env
+    regexp: '^NODE_ID='
+    line: 'NODE_ID={{ node_id | default(0, true) }}'
+  become: yes
+
 - name: Ensure /opt/venv directory exists
   ansible.builtin.file:
     path: "/opt/venv"
