--- a/.env.web-sample
+++ b/.env.web-sample
@@ -1,2 +1,3 @@
 DJANGO_SECRET_KEY="django-insecure-ajq-plfh&4uh6rea1zliteu+bszy57v*g%t0t^j2i^6)w%t"
 DATABASE_URL="postgresql://local_username:local_password@localhost:5555/local_database"
+CELERY_BROKER_REDIS_URL="redis://localhost:6555/0"
