--- a/ansible/roles/services_config/tasks/main.yml
+++ b/ansible/roles/services_config/tasks/main.yml
@@ -28,6 +28,7 @@
     group: root
     mode: '0644'
   become: yes
+  # when: inventory_hostname in groups['nodes']
 
 - name: Reload systemd
   ansible.builtin.systemd:
