--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -4,7 +4,7 @@ djangopi.local node_id=1
 [nodes]
 djangopi-2.local node_id=2
 djangopi-3.local node_id=3
-# djangopi-4.local node_id=4
+djangopi-4.local node_id=4
 # djangopi-5.local node_id=5
 
 
