--- a/.env.web-container
+++ b/.env.web-container
@@ -1,3 +1,4 @@
 DJANGO_SECRET_KEY="django-insecure-ajq-plfh&4uh6rea1zliteu+bszy57v*g%t0t^j2i^6)w%t"
-DATABASE_URL="postgresql://local_username:local_password@timescaledb:5432/local_database"
+# DATABASE_URL="postgresql://local_username:local_password@timescaledb:5432/local_database"
+DATABASE_URL="postgres://tsdbadmin:npfvrnbqom31a7g9@oan3bi37cd.xpen1jjjh8.tsdb.cloud.timescale.com:36454/tsdb?sslmode=require"
 CELERY_BROKER_REDIS_URL="redis://redis-db:6379/0"
